--- a/CSS/CSS.css
+++ b/CSS/CSS.css
@@ -1,3 +1,6 @@
+body{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .Checkbox{
     height: 15px;
     width: 15px;
@@ -10,9 +13,58 @@
 .Error{
   color:crimson;
 }
+.Confirmacion{
+  color: green;
+}
+.IndexRow > td > img{
+  width: 100%;
+}
+.IndexRow > td{
+  border-style: solid;
+  border-color: black;
+}
+.RightImg{
+  float: left;
+}
+.NotFound{
+  text-align: center;
+}
+.NotFound > img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
+input[type="submit"]{
+  background-color: black;
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  border-radius: 5px;
+  height: 2em;
+}
+input[type="reset"]{
+  background-color: black;
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  border-radius: 5px;
+  height: 2em;
+}
+
+input[type="checkbox"]{
+  height: 1.2em;
+  width: 1.2em;
+}
+select[multiple] > option:hover{
+  border-style:inset;
+}
+select[multiple]{
+  height: 5em;
+}
 header{
     background-color: steelblue;
-    width: 105%;
+    margin-left: -8px;
+    margin-top: -8px;
+    margin-right: -8px;
     top: 0;
     left: 0;
     position: static;
@@ -26,11 +78,6 @@ header{
     border: none;
     height: 180px;
 }
-.RegisterButton{
-  float: right;
-  float: inline-end;
-}
-
 #PageIcon{
     float: left;
     padding-left: 6px;
@@ -44,6 +91,30 @@ header{
   ul{
       list-style: none;
   }
+.SpaceBetween{
+  background-color: black;
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  border-radius: 5px;
+  height: 2em;
+  padding: 3px;
+  border-style:outset;
+  border-color: gray;
+}
+#BotonRegistro{
+  background-color: black;
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  border-radius: 5px;
+  height: 1em;
+  padding: 3px;
+  margin-left: 7px;
+  border-style:outset;
+  border-color: gray;
+}
+#BotonRegistro:hover{
+  cursor: pointer;
+}
 #menu li > a{
 	color: midnightblue;
   	text-decoration: none;
@@ -65,4 +136,25 @@ header{
 }
 #menu > li:hover > ul{
   display:block;
+}
+footer{
+  background-color: black;
+  color: white;
+  margin-left: -8px;
+  margin-right: -8px;
+  margin-bottom: -100px;
+
+}
+footer > table{
+  color: white;
+}
+footer a{
+  color: gray;
+  text-decoration: none;
+}
+.Social{
+  font-size: large;
+}
+.Social > img{
+  height: 1.7em;
 }
