Panel de cuenta usuario
Haciendo el panel de cuenta del usuario, he hecho ya el formulario para cambiar la información y preparado los botones para cambiar contraseña

--- a/CSS/CSS.css
+++ b/CSS/CSS.css
@@ -54,6 +54,9 @@ input[type="checkbox"]{
   height: 1.2em;
   width: 1.2em;
 }
+.Peligro[type="submit"]{
+  background-color: RED;
+}
 select[multiple] > option:hover{
   border-style:inset;
 }
